# poker0

./: .env  .gitignore  Cargo.toml  README.md
bonsai/: Cargo.toml
bonsai/src/: snark.rs  stark.rs
contracts/: .gitignore  hardhat.config.js  package.json
contracts/contracts/PlonkVerifier/: PlonkPokerVerify.sol  VerifierKey.sol  VerifierKeyExtra1.sol  VerifierKeyExtra2.sol
contracts/contracts/PlonkVerifier/verifier/: Verifier.sol
contracts/contracts/RiscZeroGroth16/: ControlID.sol  Groth16Verifier.sol  IRiscZeroVerifier.sol  RiscZeroGroth16Verifier.sol
contracts/contracts/openzeppelin/: SafeCast.sol
contracts/contracts/plonk/: ExternalTranscript.sol  PlonkVerifier.sol  PokerVerify.sol  VerifierKey.sol
contracts/contracts/plonk/verifier/: PlonkVerifier.sol
contracts/test/: PlonkVerify.js  RiscZeroGroth16.js
core/: Cargo.toml
core/src/: cards.rs  combination.rs  errors.rs  lib.rs  mock_data.rs  play.rs  schnorr.rs  task.rs
core/src/mock_data/: journal.rs  task.rs  task0.rs
core/src/prove_outsource/: public_keys.rs  reveals.rs  signatures.rs  unmask.rs
gadgets/: Cargo.toml
gadgets/src/: build_cs.rs  lib.rs  public_keys.rs  reveals.rs  signatures.rs  test.rs  unmask.rs
gadgets/src/gen_params/: mod.rs  params.rs  setup.rs
game/: .eslintrc.js  README.md  config-overrides.js  package.json  tsconfig.json
game/contracts/: .gitignore  MyLib.ts  deploy.ts  hardhat.config.ts  package.json  wagmi.config.ts
game/contracts/config/: Config-5611.ts
game/contracts/contracts/: Multicall3.sol  PokerApi.sol  PokerLib.sol  RoomMarket.sol  SimpleGame.sol  Token.sol
game/public/: index.html
game/src/: constants.ts  index.tsx  wagmi.abi.ts  wagmi.config.ts
game/src/assets/scss/: index.scss
game/src/components/: PokerAvatar.tsx  PokerCard.tsx  PokerRules.tsx
game/src/components/Com/: AppButton.tsx
game/src/hook/: useGameRoomChat.tsx  usePromise.tsx  useWallet.tsx  useWss.tsx
game/src/lib/: RowPoker0AI.ts  poker-wasm.ts  wss.ts
game/src/pages/: App.tsx  Header.tsx
game/src/pages/Game/: GamePlayer.tsx  index.tsx  states.tsx
game/src/pages/Index/: JoinRoomWithRoomId.tsx  index.tsx  states.tsx
game/src/states/: login.tsx  wallet.tsx
game/src/types/: poker.ts
game/src/utils/: index.ts
game/src/wasm/: package.json  poker_wasm.d.ts  poker_wasm.js  poker_wasm_bg.js  poker_wasm_bg.wasm  poker_wasm_bg.wasm.d.ts
game/src/workers/: poker.ts
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
node/: Cargo.toml  README.md
node/src/: errors.rs  handler.rs  main.rs
plonk/: Cargo.toml
plonk/src/: build_cs.rs  errors.rs  lib.rs  public_keys.rs  reveals.rs  signatures.rs  test.rs  unmask.rs
plonk/src/gen_params/: mod.rs  params.rs  setup.rs
plonk/src/poly_commit/: field_polynomial.rs  kzg_poly_commitment.rs  mod.rs  pcs.rs  transcript.rs
plonk/src/turboplonk/: helpers.rs  indexer.rs  prover.rs  transcript.rs  verifier.rs
plonk/src/turboplonk/constraint_system/: mod.rs
plonk/src/turboplonk/constraint_system/anemoi/: mod.rs
plonk/src/turboplonk/constraint_system/ecc/: const_base_ecc.rs  nonconst_base_ecc.rs
plonk/src/turboplonk/constraint_system/legendre/: mod.rs
plonk/src/turboplonk/constraint_system/turbo/: mod.rs
plonk/src/utils/: mod.rs  prelude.rs  serialization.rs
risc0/bonsai/: Cargo.toml
risc0/bonsai/src/: snark.rs
risc0/core/: Cargo.toml
risc0/core/src/: cards.rs  combination.rs  lib.rs  schnorr.rs  task.rs
risc0/core/src/mock_data/: journal.rs  mod.rs  task.rs  task0.rs
risc0/host/: Cargo.toml
risc0/methods/: Cargo.toml
risc0/methods/guest/: Cargo.toml
risc0/methods/guest/src/: main.rs
snark/: Cargo.toml
snark/src/: build_cs.rs  lib.rs  test.rs
snark/src/gadgets/: mod.rs  public_keys.rs  reveals.rs  signatures.rs  unmask.rs
snark/src/gen_params/: mod.rs  params.rs  setup.rs
wasm/: Cargo.toml
wasm/src/: lib.rs  poker.rs  utils.rs
