[workspace]
members = [
  "risc0/core",
  "risc0/host",
  "risc0/methods",
  "risc0/bonsai",
  "snark",
  "wasm",
  "node"
]
resolver = "2"

[workspace.dependencies]
poker-methods = { path = "risc0/methods" }
poker-core = { path = "risc0/core" }
poker-bonsai = { path = "risc0/bonsai" }
poker-snark = { path = "snark" }
ark-ff = { version = "0.4", package = "ark-ff-zypher" }
ark-ec = { version = "0.4", package = "ark-ec-zypher" }
ark-poly  = { version = "0.4", package = "ark-poly-zypher" }
ark-bn254 = { version = "0.4", package = "ark-bn254-zypher" }
ark-ed-on-bn254 = { version = "0.4", package = "ark-ed-on-bn254-zypher" }
ark-std = { version = "0.4", package = "ark-std-zypher" }
ark-serialize = { version = "0.4", default-features = false, features = ["derive"], package = "ark-serialize-zypher" }
async-trait = "0.1"
bincode = "1.3"
bonsai-sdk = "0.7"
bytemuck = "1.14"
chrono = "0.4"
displaydoc = { version = "0.2", default-features = false }
dotenv = "0.15"
hashbrown = "=0.14.3"
hex = "0.4"
lazy_static = "1.4"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
once_cell = "1.19"
rand = "0.8"
rand_chacha = "0.3"
rand_core  = "0.6"
rayon = "1.7"
risc0-zkvm = { version = "0.21", default-features = false }
risc0-build = { version = "0.21" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt =  "0.3"
thiserror = "1.0"
tokio = "1.35"
uzkge = "0.1"
zshuffle = "0.1"
z4-engine = "0.0.1"
z4-types = "0.0.1"

# wasm
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[patch.crates-io]
z4-engine = { path = "../z4/engine" }
z4-types = { path = "../z4/types" }