[package]
name = "poker-bonsai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poker-methods = { workspace = true }
poker-core = { workspace = true }
risc0-zkvm = { workspace = true }
bonsai-sdk = { workspace = true }
bytemuck = "1.14"
hex = "0.4"
bincode = "1.3"
dotenv = "0.15"

[dev-dependencies]
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-traits = "0.2.18"
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
ark-serialize = { workspace = true }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[features]
default = []
serialize0 = ["poker-core/serialize0"]
deserialize0 = ["poker-core/deserialize0"]