[package]
name = "poker-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonk = { workspace = true }
zshuffle = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
ark-bn254 = { workspace = true }
ark-serialize = { workspace = true }
rand_chacha = "0.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
hashbrown = "=0.12.3"
serde_json = "1.0"

[dev-dependencies]

[features]
default = []
serialize0 = ["plonk/serialize0"]
deserialize0 = ["plonk/deserialize0"]
