[package]
name = "gadgets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gen-params"
path = "src/gen_params/setup.rs"
required-features = ["gen"]


[dependencies]
ark-bn254 = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
ark-ff = { workspace = true }
plonk = { workspace = true }
poker-core = { workspace = true }
zshuffle = { workspace = true }
bincode = "1.3"
structopt =  { version = "0.3", optional = true}
displaydoc = { version = "0.2.4", default-features = false }
num-bigint = "0.4.3"
num-integer = "0.1.45"
rand_chacha =  "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = '1.0'
rayon = { version = "1.7", optional = true}
lazy_static = "1.4"

[features]
default = ["parallel"]
parallel = [
  "rayon",
  "ark-std/parallel",
  "ark-ff/parallel",
  "ark-ec/parallel",
  "plonk/parallel"
]
no_srs = []
no_vk = []
no_perm = []
gen = ["parallel", "structopt"]