[package]
name = "poker-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poker-core = { workspace = true }
poker-bonsai = { workspace = true }
poker-snark = { workspace = true }
ark-ff = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
ark-serialize = { workspace = true }
zshuffle = { workspace = true ,features= ["parallel"] }
z4-engine = { path = "../../z4/engine"}
tokio = "1.35"
async-trait = "0.1"
dotenv = "0.15"
serde_json = '1.0'
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
ark-ec = { workspace = true }