[package]
name = "poker-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poker-core = { workspace = true }
poker-bonsai = { workspace = true }
poker-snark = { workspace = true }
ark-ff = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
ark-serialize = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
zshuffle = { workspace = true, features= ["parallel"] }
z4-engine = { path = "../../z4/engine"}
tokio = "1.35"
async-trait = "0.1"
dotenv = "0.15"
serde_json = '1.0'
rand = "0.8"
rand_chacha = "0.3"
once_cell = "1.19"
hex = "0.4"
chrono = "0.4"
rayon = { version = "1.7", optional = true}

[features]
default = ["std"]
serialize0 = ["poker-core/serialize0", "poker-bonsai/serialize0"]
deserialize0 = ["poker-core/deserialize0","poker-bonsai/deserialize0"]
std = ["ark-std/std"]
parallel = [
  "rayon",
  "ark-std/parallel",
  "ark-ff/parallel",
  "ark-ec/parallel",
  "poker-snark/parallel"
]