[package]
name = "poker-node"
version = "0.1.0"
edition = "2021"

[dependencies]
poker-core.workspace = true
poker-bonsai.workspace = true
poker-snark.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
ark-ed-on-bn254.workspace = true
async-trait.workspace = true
chrono.workspace = true
hex.workspace = true
once_cell.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
z4-engine.workspace = true
zshuffle = { workspace = true, features= ["parallel"] }
rayon = { workspace = true, optional = true}

[features]
default = ["std"]
serialize0 = ["poker-core/serialize0", "poker-bonsai/serialize0"]
deserialize0 = ["poker-core/deserialize0","poker-bonsai/deserialize0"]
std = ["ark-std/std"]
parallel = [
  "rayon",
  "ark-std/parallel",
  "ark-ff/parallel",
  "ark-ec/parallel",
  "poker-snark/parallel"
]