[package]
name = "poker-plonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gen-params"
path = "src/gen_params/setup.rs"
required-features = ["gen"]

[dependencies]
poker-core = { workspace = true }
zplonk = { workspace = true }
zshuffle = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
ark-bn254 = { workspace = true }
ark-serialize = { workspace = true }
num-bigint = "0.4.3"
num-integer = "0.1.45"
rand_chacha =  "0.3"
lazy_static = "1.4"
bincode = "1.3"
structopt =  { version = "0.3", optional = true}
serde = { version = "1.0", features = ["derive"] }
rayon = { version = "1.7", optional = true}


[features]
default = ["parallel"]
no_srs = []
no_vk = []
parallel = [
  "rayon",
  "ark-std/parallel",
  "ark-ff/parallel",
  "ark-ec/parallel",
  "zplonk/parallel"
]
gen = ["parallel", "structopt"]