[package]
name = "poker-plonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gen-params"
path = "src/gen_params/setup.rs"
required-features = ["gen"]

[dependencies]
poker-core = { workspace = true }
zplonk = { workspace = true }
zshuffle = { workspace = true }
num-bigint = "0.4.3"
num-integer = "0.1.45"
rand_chacha =  "0.3"
lazy_static = "1.4"
bincode = "1.3"
structopt =  { version = "0.3", optional = true}
serde = { version = "1.0", features = ["derive"] }
rayon = { version = "1.7", optional = true}
displaydoc = { version = "0.2.4", default-features = false }
serde_derive = '1.0'
sha3 = "0.10"
itertools = "0.12"

[dependencies.ark-ec]
version = "0.4"
default-features = false

[dependencies.ark-ff]
version = "0.4"
default-features = false
features = ["asm"]

[dependencies.ark-std]
version = "0.4"
default-features = false

[dependencies.ark-poly]
version = "0.4"
default-features = false

[dependencies.ark-serialize]
version = "0.4"
default-features = false
features = ["derive"]

[dependencies.ark-bn254]
version = "0.4"
default-features = false
features = ["curve"]

[dependencies.ark-ed-on-bn254]
version = "0.4"
default-features = false

[features]
default = ["parallel"]
no_srs = []
no_vk = []
no_perm = []
parallel = [
  "rayon",
  "ark-std/parallel",
  "ark-ff/parallel",
  "ark-ec/parallel",
  "ark-poly/parallel",
]
gen = ["parallel", "structopt"]