[package]
name = "plonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
ark-bn254 = { workspace = true }
itertools = "0.12"
num-bigint = "0.4.3"
num-integer = "0.1.45"
rand_chacha =  "0.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = '1.0'
rayon = { version = "1.7", optional = true}
displaydoc = { version = "0.2.4", default-features = false }
sha3 = "0.10"

[features]
default = []
parallel = [
  "rayon",
  "ark-std/parallel",
  "ark-ff/parallel",
  "ark-ec/parallel",
  "ark-poly/parallel",
]
serialize0 = []
deserialize0 = []