[package]
name = "poker-snark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen-params"
path = "src/gen_params/setup.rs"
required-features = ["gen"]

[dependencies]
poker-core.workspace = true
ark-bn254.workspace = true
ark-ed-on-bn254.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
ark-ff.workspace = true
bincode.workspace = true
displaydoc.workspace = true
hex.workspace = true
lazy_static.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
rand_chacha.workspace = true
serde.workspace = true
uzkge.workspace = true
rayon = { workspace = true, optional = true}
structopt = { workspace = true, optional = true}

[features]
default = ["parallel"]
no_srs = []
no_vk = []
no_perm = []
parallel = [
  "rayon",
  "ark-std/parallel",
  "ark-ff/parallel",
  "ark-ec/parallel",
  "uzkge/parallel"
]
gen = ["parallel", "structopt"]
serialize0 = ["uzkge/serialize0"]
deserialize0 = ["uzkge/deserialize0"]