[package]
name = "poker-wasm"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
poker-core = { workspace = true }
zshuffle = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
rand_chacha = { version = "0.3", default-features= false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.6"
thiserror = { version = "1.0" }
wasm-bindgen = "0.2"
serde_json = '1.0'

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4", optional = true }