[package]
name = "poker-method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "0.20.1", default-features = false, features = [ "std" ] }
poker-core = { path = "../../core", features= ["serialize0", "deserialize0"]}
ark-serialize = { version = "0.4", default-features = false, features = ["derive"] }
ahash = { version = "=0.8.6", default-features = false, features = ["compile-time-rng"] }

[patch.crates-io]
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra" }
ark-ed-on-bn254 = { git = "https://github.com/arkworks-rs/algebra" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16" }
zshuffle = { git = "https://github.com/zypher-game/uzkge", branch = "test" }
zplonk = { git = "https://github.com/zypher-game/uzkge", branch = "test" }