[package]
name = "poker-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
ark-std.workspace = true
ark-ed-on-bn254.workspace = true
ark-bn254.workspace = true
ark-serialize.workspace = true
hashbrown.workspace = true
lazy_static.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true
uzkge.workspace = true

[dev-dependencies]

[features]
default = []
serialize0 = ["uzkge/serialize0"]
deserialize0 = ["uzkge/deserialize0"]
