[package]
name = "poker-method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "0.21", default-features = false, features = [ "std" ] }
poker-core = { path = "../../core", features= ["serialize0", "deserialize0"]}
ark-serialize = { version = "0.4", default-features = false, features = ["derive"], package = "ark-serialize-zypher" }
ahash = { version = "=0.8.6", default-features = false, features = ["compile-time-rng"] }